--- a/FermaOnline/Views/Shared/_Layout.cshtml
+++ b/FermaOnline/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Experyment" asp-action="Index">Pomiary</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Experyment" asp-action="ShowExperymentList">Experymenty</a>
                         </li>
                     </ul>
                 </div>
