--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -13,18 +13,22 @@
 
     @if (Model!=null)
     {
-        <table class="table table-bordered table-striped" style="width:100%">
+
+
+<table class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
                     <th>
                         Data
                     </th>
+                   @foreach(var survey in @Model.SurveysList)
+                   {
+                <th>
+                   @survey.SurveyDate
+                </th>
+                   }
                     
-                        <th>
-                            @Model.Name
-                        </th>
-                    
-
+                        
                 </tr>
             </thead>
             <tbody>
