--- a/FermaOnline/Views/Survey/Create.cshtml
+++ b/FermaOnline/Views/Survey/Create.cshtml
@@ -36,13 +36,13 @@
                     <div class="mb-3 row">
                         <label asp-for="A.GroupWeight">A group weight</label>
                         <div class="col-sm-10">
-                            <input asp-for="A.GroupWeight" class="form-control " />
+                            <input  type="number" step="0.01" asp-for="A.GroupWeight" class="form-control " />
                         </div>
                     </div>
                     <div class="mb-3 row">
                         <label asp-for="B.GroupWeight">B  group weight</label>
                         <div class="col-sm-10">
-                            <input asp-for="B.GroupWeight" class="form-control" />
+                            <input  type="number" step="0.01" asp-for="B.GroupWeight" class="form-control" />
                         </div>
                     </div>
                     <div class="mb-3 row">
@@ -54,7 +54,7 @@
                     <div class="mb-3 row">
                         <label asp-for="LoculusFeedInTake"></label>
                         <div class="col-sm-10">
-                            <input asp-for="LoculusFeedInTake" class="form-control" />
+                            <input type="number" step="0.01" asp-for="LoculusFeedInTake" class="form-control" />
                         </div>
                     </div>
                     <div class="form-group row">
