--- a/FermaOnline/Views/Survey/Create.cshtml
+++ b/FermaOnline/Views/Survey/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Survey
+ 
 
 <form method="post" asp-action="Create">
     <input type="hidden" asp-for="ExperymentId" value=@(ViewContext.RouteData.Values["id"]) />
@@ -36,21 +37,25 @@
                     <div class="mb-3 row">
                         <label asp-for="A.GroupWeight">A group weight</label>
                         <div class="col-sm-10">
-                            <input  type="number" step="0.01" asp-for="A.GroupWeight" class="form-control " />
+                            <input type="number" step="0.01" asp-for="A.GroupWeight" class="form-control " />
                         </div>
                     </div>
                     <div class="mb-3 row">
                         <label asp-for="B.GroupWeight">B  group weight</label>
                         <div class="col-sm-10">
-                            <input  type="number" step="0.01" asp-for="B.GroupWeight" class="form-control" />
+                            <input type="number" step="0.01" asp-for="B.GroupWeight" class="form-control" />
                         </div>
                     </div>
-                    <div class="mb-3 row">
-                        <label asp-for="DayOfLife"></label>
-                        <div class="col-sm-10">
-                            <input asp-for="DayOfLife" class="form-control" />
+                    @if (ViewBag.IsFirstSurvay)
+                    {
+                        <div class="mb-3 row">
+                            <label asp-for="DayOfLife"></label>
+                            <div class="col-sm-10">
+                                <input asp-for="DayOfLife" class="form-control" />
+                            </div>
                         </div>
-                    </div>
+                    }
+
                     <div class="mb-3 row">
                         <label asp-for="LoculusFeedInTake"></label>
                         <div class="col-sm-10">
