--- a/FermaOnline/Views/Survey/Delete.cshtml
+++ b/FermaOnline/Views/Survey/Delete.cshtml
@@ -1,8 +1,8 @@
-﻿@model Experiment
+﻿@model Survey
 
 
 <form method="post" asp-action="DeletePost">
-    <input asp-for="Id" hidden/>
+    <input asp-for="SurveyId" hidden />
     <div class="border p-3">
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Delete experiment</h2>
@@ -11,12 +11,12 @@
             <div class="col-12">
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Name">Are you sure you want to delete this experiment?</label>
+                        <label asp-for="SurveyDate">Are you sure you want to delete this survey?</label>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <input asp-for="Name" disabled class="form-control" />
+                        <input asp-for="SurveyDate" disabled class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row">
@@ -25,7 +25,7 @@
                             <input type="submit" class="btn btn-danger w-75" value="Delete" />
                         </div>
                         <div class="col-4">
-                            <a asp-action="Index" class="btn btn-success w-75">Back</a>
+                            <a asp-controller="Experiment" asp-action="Show" asp-route-Id=@(ViewContext.RouteData.Values["id"]) class="btn btn-danger w-75">Back</a>
                         </div>
                     </div>
                 </div>
@@ -35,3 +35,4 @@
     </div>
 </form>
 
+ 
