--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -3,7 +3,7 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Lista pomiarow ExperymentName</h2>
+            <h2 class="text-primary">Lista pomiarow @Model.Name</h2>
         </div>
         <div class="col-6">
             <a type="button" class="btn btn-primary" asp-controller="Survey" asp-route-Id="@Model.Id" asp-action="Create">Add survey</a>
@@ -194,10 +194,76 @@
                             <td>@survey.FeedConversionRatio </td>
                         }
                     </tr>
+                    <tr>
+                        @foreach (var survey in Model.SurveysList)
+                        {
+                            <td><a asp-controller="Survey" asp-action="Delete" asp-route-Id="@survey.SurveyId" class="btn btn-danger mx-1">Delete</a></td>
+                        }
+
+                    </tr>
                 </tbody>
             </table>
         </div>
 
+
+        <canvas class="my-4 h-25" id="myChart"> </canvas>
+
+ 
+        <script>
+            var chartdata = [];
+
+         @foreach (var days in Model.SurveysList)
+         {
+              @: chartdata.push(@days.AverageBodyWeight);
+        }
+         
+
+            var ctx = document.getElementById('myChart').getContext('2d');
+            var myChart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                    datasets: [{
+                        label: '# of Votes',
+                        data: chartdata,
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 206, 86, 0.2)',
+                            'rgba(75, 192, 192, 0.2)',
+                            'rgba(153, 102, 255, 0.2)',
+                            'rgba(255, 159, 64, 0.2)'
+                        ],
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            position: 'top',
+                        },
+                        title: {
+                            display: true,
+                            text: 'Chart.js Line Chart'
+                        }
+                    },
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+        </script>
     }
     else
     { <p>Nie przeprowadzono jeszcze pomiarów </p>}
