--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -143,7 +143,7 @@
                         <td>Average weight gain</td>
                         @foreach (var survey in Model.SurveysList)
                         {
-                            <td>@survey.AverageWeightGain </td>
+                            <td>@survey.AverageWeightGainFromCages </td>
                         }
                     </tr>
                     <tr>
@@ -161,10 +161,10 @@
                         }
                     </tr>
                     <tr>
-                        <td>Average weight gain from start</td>
+                        <td>Average weight gain from last survey</td>
                         @foreach (var survey in Model.SurveysList)
                         {
-                            <td>@survey.AverageWeightGainFromStart </td>
+                            <td>@survey.AverageWeightGainFromLastSurvey </td>
                         }
                     </tr>
                     <tr>
@@ -199,7 +199,7 @@
                         <td></td>
                         @foreach (var survey in Model.SurveysList)
                         {
-                            <td><a asp-controller="Survey" asp-action="Delete" asp-route-Id="@survey.SurveyId" class="btn btn-danger mx-1">Delete</a></td>
+                            <td><a asp-controller="Survey" asp-action="DeletePost " asp-route-Id="@survey.SurveyId" class="btn btn-danger mx-1">Delete</a></td>
                         }
 
                     </tr>
