--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -16,6 +16,9 @@
                     <div class="col-4">
                         <label asp-for="Status"></label>
                     </div>
+                    <div class="col-4">
+                        <label asp-for="Description"></label>
+                    </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
@@ -23,6 +26,15 @@
                     </div>
                     <div class="col-4 form-check form-switch">
                         <input class="form-check-input" type="checkbox" asp-for="Status" />
+                    </div>
+                    <div class="col-4">
+                        <textarea class="form-control" asp-for="Description" rows="3"></textarea>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-4">
+                            <label class="form-label" for="postedFiles">Upload image </label>
+                            <input type="file" name="postedFiles" class="form-control" multiple />
+                        </div>
                     </div>
                 </div>
                 <div class="form-group row">
