--- a/FermaOnline/Views/Survey/Create.cshtml
+++ b/FermaOnline/Views/Survey/Create.cshtml
@@ -2,7 +2,7 @@
  
 
 <form method="post" asp-action="Create">
-    <input type="hidden" asp-for="ExperymentId" value=@(ViewContext.RouteData.Values["id"]) />
+    <input type="hidden" asp-for="ExperimentId" value=@(ViewContext.RouteData.Values["id"]) />
     <div class="border p-3">
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Add survey</h2>
@@ -55,13 +55,15 @@
                             </div>
                         </div>
                     }
-
-                    <div class="mb-3 row">
-                        <label asp-for="LoculusFeedInTake"></label>
-                        <div class="col-sm-10">
-                            <input type="number" step="any" asp-for="LoculusFeedInTake" class="form-control" /> <!-- form nie przyjmuje floatow??-->
+                    else
+                    {
+                        <div class="mb-3 row">
+                            <label asp-for="LoculusFeedInTake"></label>
+                            <div class="col-sm-10">
+                                <input asp-for="LoculusFeedInTake" class="form-control" /> <!-- NIE PRZYJMUJE FLOAT???-->
+                            </div>
                         </div>
-                    </div>
+                    }
                     <div class="form-group row">
                         <div class="col-12 offset-1 row">
                             <div class="col-4">
