--- a/FermaOnline/Views/Experiment/Create.cshtml
+++ b/FermaOnline/Views/Experiment/Create.cshtml
@@ -23,6 +23,12 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
+                        <label asp-for="CageNumber"></label> <br />
+                        <input class="form-control" asp-for="CageNumber"> </input>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4">
                         <label class="form-label" for="postedFiles">Upload image </label>
                         <input class="form-control" type="file" id="fileSelect" name="postedFiles" multiple />
                     </div>
