--- a/FermaOnline/Views/Experiment/Create.cshtml
+++ b/FermaOnline/Views/Experiment/Create.cshtml
@@ -1,8 +1,9 @@
-﻿@model Experiment
+﻿@model FermaOnline.Models.Experiment
 
 
 <form method="post" asp-action="Create">
     <div class="border p-3">
+        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Add experiment</h2>
         </div>
@@ -13,6 +14,7 @@
                     <div class="col-4">
                         <label asp-for="Name"></label>
                         <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -51,4 +53,7 @@
         </div>
     </div>
 </form>
-
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />}
+}
