--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -1,9 +1,10 @@
-﻿@model Experiment
+﻿@model FermaOnline.Models.Experiment
 
 
 <form method="post" asp-action="Update">
     <input asp-for="Id" hidden />
     <div class="border p-3">
+        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Update experiment</h2>
         </div>
@@ -23,6 +24,7 @@
                 <div class="form-group row">
                     <div class="col-4">
                         <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="col-4 form-check form-switch">
                         <input class="form-check-input" type="checkbox" asp-for="Status" />
@@ -52,4 +54,7 @@
         </div>
     </div>
 </form>
-
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />}
+    }
