--- a/FermaOnline/Views/Survey/Create.cshtml
+++ b/FermaOnline/Views/Survey/Create.cshtml
@@ -1,9 +1,10 @@
-﻿@model Survey
+﻿@model FermaOnline.Models.Survey
  
 
 <form method="post" asp-action="Create">
     <input type="hidden" asp-for="ExperimentId" value=@(ViewContext.RouteData.Values["id"]) />
     <div class="border p-3">
+        @*<div asp-validation-summary="All" class="text-danger"></div>*@
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Add survey</h2>
         </div>
@@ -15,43 +16,50 @@
                     <label asp-for="SurveyDate"></label>
                     <div class="col-sm-10">
                         <input asp-for="SurveyDate" class=".form-control " />
+                        <span asp-validation-for="SurveyDate" class="text-danger"></span>
                     </div>
                     <div class="mb-3 row">
                         <label asp-for="LoculusQuantity"></label>
                         <div class="col-sm-10">
-                            <input asp-for="LoculusQuantity" class="form-control " />
+                            <input asp-for="LoculusQuantity" class="form-control"/>
+                            <span asp-validation-for="LoculusQuantity" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="sb-3 row">
                         <label asp-for="A.CageQuantity">A quantity</label>
                         <div class="col-sm-10">
                             <input asp-for="A.CageQuantity" class="form-control " />
+                            <span asp-validation-for="A.CageQuantity" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="mb-3 row">
                         <label asp-for="B.CageQuantity">B quantity</label>
                         <div class="col-sm-10">
                             <input asp-for="B.CageQuantity" class="form-control " />
+                            <span asp-validation-for="B.CageQuantity" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="mb-3 row">
                         <label asp-for="A.GroupWeight">A group weight</label>
                         <div class="col-sm-10">
                             <input type="number" step="0.01" asp-for="A.GroupWeight" class="form-control " />
+                            <span asp-validation-for="A.GroupWeight" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="mb-3 row">
                         <label asp-for="B.GroupWeight">B  group weight</label>
                         <div class="col-sm-10">
                             <input type="number" step="0.01" asp-for="B.GroupWeight" class="form-control" />
+                            <span asp-validation-for="B.GroupWeight" class="text-danger"></span>
                         </div>
                     </div>
-                    @if (ViewBag.IsFirstSurvay)
+                    @if (ViewBag.IsFirstSurvey == true) //ważne żeby na widokach w if było == true czy cuś bo walidacje wypierdala w kosmos
                     {
                         <div class="mb-3 row">
                             <label asp-for="DayOfLife"></label>
                             <div class="col-sm-10">
                                 <input asp-for="DayOfLife" class="form-control" />
+                                <span asp-validation-for="DayOfLife" class="text-danger"></span>
                             </div>
                         </div>
                     }
@@ -61,6 +69,7 @@
                             <label asp-for="LoculusFeedInTake"></label>
                             <div class="col-sm-10">
                                 <input asp-for="LoculusFeedInTake" class="form-control" /> <!-- NIE PRZYJMUJE FLOAT???-->
+                                <span asp-validation-for="LoculusFeedInTake" class="text-danger"></span>
                             </div>
                         </div>
                     }
@@ -79,4 +88,3 @@
         </div>
     </div>
 </form>
-
