Added short description under name

--- a/FermaOnline/Views/Experiment/Index.cshtml
+++ b/FermaOnline/Views/Experiment/Index.cshtml
@@ -38,7 +38,23 @@
                     var start = DateTime.Compare(experiment.Start, new DateTime(0001, 01, 01, 00, 00, 00)) == 0 ? "-" : experiment.Start.ToString("dd/MM/yyyy");// porównaj czy nie jest null i wyświetl w dobrym formacie jak jest null to -
                     var end = DateTime.Compare(experiment.End, new DateTime(0001, 01, 01, 00, 00, 00)) == 0 ? "-" : experiment.End.ToString("dd/MM/yyyy");
                     <tr>
-                        <td width="30%"> @experiment.Name  </td>
+                        <td width="30%">
+                            @experiment.Name<br>
+                            @if (experiment.Description != null)
+                            {
+                                var dot = 0;
+                                @for (int i = 0; i < experiment.Description.Length; i++)
+                                {
+                                    @if (experiment.Description[i] == 46) //46 = ascii dot
+                                    {
+                                        dot = i + 1;
+                                        break;
+                                    }
+                                    dot = 0;
+                                }
+                                @experiment.Description.Substring(0, dot );
+                            }
+                        </td>
                         <td width="30%"> @start</td>
                         <td width="30%"> @end</td>
                         <td width="40%">
@@ -49,8 +65,8 @@
                             </div>
                         </td>
                     </tr>
-                }
-            </tbody>
+                    }
+                </tbody>
         </table>
     }
     else
