--- a/FermaOnline/Views/Experiment/Create.cshtml
+++ b/FermaOnline/Views/Experiment/Create.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Experiment
 
-
 <form method="post" asp-action="Create">
     <div class="border p-3">
         <div class="form-group row">
@@ -18,6 +17,7 @@
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Description"></label> <br />
+                        <div id="summernote"></div>
                         <textarea class="form-control" asp-for="Description" rows="3"></textarea>
                     </div>
                 </div>
@@ -51,4 +51,15 @@
         </div>
     </div>
 </form>
-
+@section Scripts {
+    <!-- include summernote css/js -->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#Description').summernote({
+                height: 250
+            });
+        });
+    </script>
+}
