--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table ">
-                        <thead>
+                        <thead>ez 
                             <tr>
                                 <th>Data</th>
                                 @foreach (var survey in Model.SurveysList)
@@ -45,8 +45,12 @@
                                     <td>
                                         <table class="table mb-0">
                                             <tr>
-                                                <td>A </td>
-                                                <td>B </td>
+                                                @for (int i = 0; i < Model.CageNumber; i++)
+                                                {
+                                                    <td>@i </td>
+                                                }
+                                                 
+
                                             </tr>
                                         </table>
                                     </td>
@@ -66,8 +70,10 @@
                                     <td>
                                         <table class="table mb-0">
                                             <tr>
-                                                <td>@survey.A.CageQuantity </td>
-                                                <td>@survey.B.CageQuantity </td>
+                                                @foreach (var cage in survey.Cages)
+                                                {
+                                                    <td>@cage.CageQuantity </td>
+                                                }
                                             </tr>
                                         </table>
                                     </td>
@@ -80,8 +86,10 @@
                                     <td>
                                         <table class="table mb-0">
                                             <tr>
-                                                <td>@survey.A.GroupWeight </td>
-                                                <td>@survey.B.GroupWeight </td>
+                                                @foreach (var cage in survey.Cages)
+                                                {
+                                                    <td>@cage.GroupWeight </td>
+                                                }
                                             </tr>
                                         </table>
                                     </td>
@@ -108,8 +116,10 @@
                                     <td>
                                         <table class="table mb-0">
                                             <tr>
-                                                <td>@survey.A.IndividualBodyWeight </td>
-                                                <td>@survey.B.IndividualBodyWeight </td>
+                                                @foreach (var cage in survey.Cages)
+                                                {
+                                                    <td>@cage.IndividualBodyWeight </td>
+                                                }
                                             </tr>
                                         </table>
                                     </td>
@@ -129,8 +139,10 @@
                                     <td>
                                         <table class="table mb-0">
                                             <tr>
-                                                <td>@survey.A.DifferenceInBodyWeight </td>
-                                                <td>@survey.B.DifferenceInBodyWeight </td>
+                                                @foreach (var cage in survey.Cages)
+                                                {
+                                                    <td>@cage.DifferenceInBodyWeight </td>
+                                                }
                                             </tr>
                                         </table>
                                     </td>
@@ -143,8 +155,10 @@
                                     <td>
                                         <table class="table mb-0">
                                             <tr>
-                                                <td>@survey.A.WeightGainFromStart </td>
-                                                <td>@survey.B.WeightGainFromStart </td>
+                                                @foreach (var cage in survey.Cages)
+                                                {
+                                                    <td>@cage.WeightGainFromStart </td>
+                                                }
                                             </tr>
                                         </table>
                                     </td>
@@ -165,8 +179,10 @@
                                     <td>
                                         <table class="table mb-0">
                                             <tr>
-                                                <td>@survey.A.WeightGainFromLastSurvey </td>
-                                                <td>@survey.B.WeightGainFromLastSurvey </td>
+                                                @foreach (var cage in survey.Cages)
+                                                {
+                                                    <td>@cage.WeightGainFromLastSurvey </td>
+                                                }
                                             </tr>
                                         </table>
                                     </td>
