Dodanie experiment code i shortdescription

--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -12,6 +12,7 @@
                 @{var TextSpecies = @Model.Status ? "This experiment is conduct on" : "This experiment was conducted on";
                     <p>@TextSpecies @Model.Species</p>
                 }
+            <p>id:@Model.Code </p>
                 <p class="lh-base">@Model.Description</p>
             </div>
         </div>
