--- a/FermaOnline/Views/Experiment/Create.cshtml
+++ b/FermaOnline/Views/Experiment/Create.cshtml
@@ -17,6 +17,12 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
+                        <label asp-for="ShortDescription"></label> <br />
+                        <textarea class="form-control" asp-for="ShortDescription" rows="3"></textarea>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4">
                         <label asp-for="Description"></label> <br />
                         <textarea class="form-control" asp-for="Description" rows="3"></textarea>
                     </div>
@@ -41,7 +47,6 @@
                         <input type="radio" asp-for="Species" value="Ruminants" />Ruminants<br />
                     </div>
                 </div>
-
                 <div class="form-group row">
                     <div class="col-8 offset-1 row">
                         <div class="col-4">
