--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -30,6 +30,10 @@
                     <div class="col-4">
                         <textarea class="form-control" asp-for="Description" rows="3"></textarea>
                     </div>
+                    <div class="col-4">
+                        <label class="form-label" for="postedFiles">Short description</label>
+                        <textarea class="form-control" asp-for="ShortDescription" rows="3"></textarea>
+                    </div>
                     <div class="form-group row">
                         <div class="col-4">
                             <label class="form-label" for="postedFiles">Upload image </label>
